--- a/first_app2/pubspec.yaml
+++ b/first_app2/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^6.0.1
   web_socket_channel: ^2.1.0
+  http: ^0.13.4
 
 dev_dependencies:
   flutter_test:
